k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-app
  namespace: cloud-app
  labels:
    app: cloud-app
  
spec:
  # ClusterIP exposes the app internally
  # External traffic is handled by the Ingress -> GCP Load Balancer
  type: ClusterIP
  selector:
    app: cloud-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
