k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloud-app
  namespace: cloud-app
  annotations:
    # Tells GKE to provision a Google Cloud HTTP(S) Load Balancer
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: cloud-app
      port:
        number: 80
